# awesome-cpp

./: .gitignore  README.md  侯捷.txt
CodeSegment/: CodeSegment.sln  winnetClient.cpp
CodeSegment/CodeSegment/: CodeSegment.cpp  CodeSegment.vcxproj  main.cpp  pch.cpp  pch.h  test.cpp  test.h
CodeSegment/IOCP/: readme.md  完成端口(CompletionPort)详解.docx
CodeSegment/InsideTheC++ObjectModel/: InsideTheC++ObjectModel.cpp  InsideTheC++ObjectModel.vcxproj  P23.h
CodeSegment/YQTools/: Singleton.h  YQTools.vcxproj  chrono.cpp  constructor.h  main.cpp
CodeSegment/chrono/: Timer.cpp  Timer.h  chrono.vcxproj  chrono.vcxproj.filters  main.cpp
CodeSegment/concurrency/: ReadMe.txt  concurrency.cpp  concurrency.vcxproj  stdafx.cpp
CodeSegment/cppreference/: QA.md  and_eq.h  cppreference.cpp  cppreference.vcxproj  moveconstructor.h  system.h  tarray.h
CodeSegment/creatocpu100/: ReadMe.txt  creatocpu100.cpp  creatocpu100.vcxproj  creatocpu100.vcxproj.filters  stdafx.cpp
CodeSegment/csv/: csv.cpp  csv.vcxproj  csv.vcxproj.filters  data.csv
CodeSegment/function/: function.cpp  function.vcxproj  functionmain.cpp
CodeSegment/modernCplusplus/: P2VariadicTemplates.cpp  modernCplusplus.cpp  modernCplusplus.vcxproj
CodeSegment/pb3/: client.lua  pb3.cpp  pb3.vcxproj  pb3.vcxproj.filters  student.pb.cc  student.pb.h  student.proto
CodeSegment/shareptr/: shareptr.cpp  shareptr.vcxproj  shareptr.vcxproj.filters
CodeSegment/thread/: detach.cpp  mutex.cpp  onceflag.cpp  promise.cpp  thread.cpp  thread.vcxproj  threadmove.cpp
CodeSegment/threadmessage/: threadmessage.cpp  threadmessage.vcxproj  threadmessage.vcxproj.filters
CodeSegment/threadpool/: SyncQueue.hpp  pch.cpp  pch.h  threadpool.hpp  threadpool.vcxproj  threadpoolmain.cpp
CodeSegment/tupe/: tupe.vcxproj  tuple.cpp
CodeSegment/winiocpServer/: winiocpServer.cpp  winiocpServer.vcxproj
CodeSegment/winnetClient/: winnetClient.cpp  winnetClient.vcxproj  winnetClient.vcxproj.filters  winnetClientTCP.cpp
CodeSegment/winnetServer/: winnetServer.cpp  (+3 more)
cpp/: .gitignore  demo  readme.md
cpp/tests/: CMakeLists.txt  main.cpp  test_demo.cpp
cpp/tests/test_cpp-httplib/: test_cpp-httplib.cpp
cpp/tests/test_cpp_httplib/: test_cpp_httplib_game.cpp
cpp/tests/test_evpp/: test_evpp.cpp
cpp/tests/test_evpp_pingpong/: CMakeLists.txt  pingpong.cc
cpp/tests/test_protobuf/: test_protobuf  test_protobuf.cpp
cpp/tests/test_protobuf/proto/: SearchRequest.pb.cc  SearchRequest.pb.h  SearchRequest.proto
cpp/tests/test_yaml/: file.yaml  test_yaml.cpp
js_socketio_client/: README.md  cli.ts  clientManage.ts  client_no_ssl.js  client_ssl.js  client_ssl.ts  package.json  server.ts
(+104 files in other folders)
